Update additional workstation link

--- a/docs/partner_editable/additional_info.adoc
+++ b/docs/partner_editable/additional_info.adoc
@@ -179,7 +179,7 @@ image::../images/qumulo_smb.png[Architecture]
 The initial deployment deploys 1 to 10 workstations. If you want to add another workstation, follow these steps:
 
 [start=1]
-. Launch the following template: http://qs_launch_permalink[Deploy additional {partner-product-short-name} workstation^]. You can also (https://github.com/aws-quickstart/quickstart-qumulo-studio-q/blob/main/templates/qs-studioq-add-workstation.cft.yaml[view the template^]. 
+. Launch the following template: https://fwd.aws/DgJ9v?[Deploy additional {partner-product-short-name} workstation^]. You can also (https://github.com/aws-quickstart/quickstart-qumulo-studio-q/blob/main/templates/qs-studioq-add-workstation.cft.yaml[view the template^]). 
 
 [start=2]
 . From the original, top-level stack, copy the *WorkstationStackName* key value.
